style/contacts.css
/* ... */
.contacts_main_content {
    padding-top: 80px; 
    height: 100%;
    width: calc(100% - 232px);
    display: flex;
    float: right;
  }  

/*contacts list container*/
.contactslist_container{
    height: 100%;
    width: 350px;
    display: flex;
    justify-content: center;
    background-color: white;  
    flex-direction: column;
    overflow-y:scroll;  
}

/*add new contact section*/
.add_new_contact_section{
    width: 100%;
    height: 90px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: sticky;
    margin-bottom: 20px;
    top: 0;
    background-color: white;
    z-index: 10;
}

.add_new_contact_button{
    width: 230px;
    height: 40px;
    background-color: #2A3647;
    border-radius: 8px;
    border: none;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.add_new_contact_button:hover{
    background-color: #1baefd;;
    box-shadow: 0px 2px 5px -1px #919192;
}

.add_contact_text{
    color: white;
    font-size: 16px;
    font-weight: bold;
    text-align: center;
}

.add_contact_icon{
    width: 23px;
    margin-left: 10px;
}

/*contacts list section*/
.contacts_list{
    height: calc(100%);
    width: 100%;
    flex-grow: 1;

}

.contacts_section{
    width: 100%;
    height: 300px;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.contacts_section_header{
    width: 70%;
    height: 40px;
    display: flex; 
    margin-bottom: 10px;
    margin-top: 40px;
    border-bottom: solid 1px #9e9c9c;
}

.contacts_section_letter{
    margin-left: 30px;
}

.contact_card_section{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding-bottom: 60px;
}

.contact_card{
    width: 70%;
    height: 70px;
    border-radius: 8px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin-bottom: 30px;
}

.contact_card:hover{
    background-color: #2A3647;
    color: white;
    cursor: pointer;
}

.contact_avatar_section{
    height: 100%;
    width: 60px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.contact_avatar{
    width: 45px;
    height: 45px;
    border-radius: 50%;
    background-color: rgb(31, 88, 245);
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    float: left;
    border: solid 2px white;
    
}

.contact_avatar_initials{
    color: white;
    font-size: 16px;
    font-weight: 300;
}

.contact_info_section{
    height: 100%;
    width: calc(100% - 80px);
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.contact_name{
    font-size: 16px;
    font-weight: 400;
    margin: 0;
    padding-left: 20px;
}

.contact_email{
    font-size: 14px;
    color: #1baefd; 
    margin: 0;
    padding-left: 20px;
}

/*contact view container*/
.contacts_view_container{
    height: 100%;
    width: calc(100% - 350px);
    display: flex;
    flex-direction: column;
}

.contact_view_header{
    height: 120px;
    width: 70%;
    display: flex;
    align-items: center;
    margin-left: 50px;
    margin-top: 40px;
}   

.contact_view_header_section{
    width: 500px;
    height: 100%;
    display: flex;
    align-items: center; 
}

.contacts_view_hl_section{
    width: 220px;
    height: 100px;
    display: flex;
    align-items: center;
}

.contacts_view_hl{
    font-size: 45px;
    font-weight: bold;
}

.contacts_view_seperator{
    width: 2px;
    height: 50px;
    background-color: #1baefd;
}

.contacts_view_sloagen_section{
    width: 220px;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.contacts_view_sloagen{
    font-size: 20px;
    font-weight: 400;
}

.contact_view_card{
    width: 100%;
    height: calc(100% - 200px);
    display: flex;

    flex-direction: column;
}

.contact_view_card_header{
    width: 500px;
    height: 120px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin-left: 50px;
}

.contact_view_avatar_section{
    width: 120px;
    height: 150px;
    display: flex;
    align-items: center;  
    justify-content: center;

}

.contact_view_avatar{
    width: 120px;
    height: 120px;
    color: white;
    background-color: rgb(31, 88, 245);
    border-radius: 100px;
    border-width: 4px;
    border-style: solid;
    border-color: rgb(255, 255, 255);
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
}

.contact_view_avatar_initials{
    font-size: 40px;
    font-weight: 500;
}

.contact_view_head_info_section{
    width: calc(100% - 120px);
    height: 90px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.contact_view_name_section{
    width: 100%;
    height: 50%;
    display: flex;
    align-items: center;
    margin-left: 80px;
}

.contact_view_name{
    font-size: 38px;
    font-weight: 500px;
    /*margin-left: 40px;*/
}

.contact_view_edit_section{
    width: 100%;
    height: 100px;
    display: flex;
    align-items: center;
    margin-left: 80px;
}
.edtit_section{
    display: flex;
    justify-content: center;
    align-items: center;
}

/*.edtit_section:hover{
    color: #1baefd;
    transform: scale(1.1); 
    cursor: pointer; 
}*/

.edit_txt{
    font-size: 14px;
    font-weight: 300;
}


.delete_section{
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 20px;
}

.edtit_section:hover,
.delete_section:hover{
    color: #1baefd;
    transform: scale(1.1); 
    cursor: pointer; 
    
}

.edtit_section:hover img{
  content: url(../assets/img/edit_blue.png);
}

.delete_section:hover img{
  content: url(../assets/img/delete_blue.png);
}

.contactview_icon{
    width: 16px;
    
}

.delete_txt{
    font-size: 14px;
    font-weight: 300; 
}
/* ... */

